test: add some contract tests and integration tests